modified:   admin-dashboar/src/app/Store.js 	modified:   admin-dashboar/src/features/auth/authSlice.jsx 	modified:   client/package-lock.json 	modified:   client/package.json 	modified:   client/public/index.html 	modified:   client/src/App.css 	modified:   client/src/App.js 	modified:   client/src/api/Srore.js 	new file:   client/src/components/Brand.jsx 	new file:   client/src/components/Carousel.jsx 	modified:   client/src/components/CustomInput.jsx 	new file:   client/src/components/FamousCat.jsx 	new file:   client/src/components/FeatureCollection.jsx 	modified:   client/src/components/Header.jsx 	new file:   client/src/components/HeroSection.jsx 	new file:   client/src/components/ImageSection.jsx 	new file:   client/src/components/LatestBlog.jsx 	new file:   client/src/components/PopulerProduct.jsx 	new file:   client/src/components/ProductCategory.jsx 	new file:   client/src/components/SpecialPro.jsx 	new file:   client/src/features/user/userServices.js 	new file:   client/src/features/user/userSlice.js 	new file:   client/src/images/d1.jpg 	new file:   client/src/images/d2.jpg 	new file:   client/src/images/d3.jpg 	new file:   client/src/images/d4.jpg 	new file:   client/src/images/d5.jpg 	new file:   client/src/images/d6.jpg 	new file:   client/src/images/d7.jpg 	new file:   client/src/images/pro1.png 	new file:   client/src/images/pro2.png 	new file:   client/src/images/pro3.jpg 	new file:   client/src/images/pro4.png 	new file:   client/src/images/pro5.jpg 	new file:   client/src/images/pro6.jpg 	new file:   client/src/images/pro7.jpg 	new file:   client/src/images/pro8.png 	modified:   client/src/index.css 	modified:   client/src/index.js 	modified:   client/src/pages/Home.jsx 	modified:   client/src/pages/Login.jsx 	modified:   client/src/pages/Signup.jsx 	new file:   client/src/pages/UserProfile.jsx 	new file:   client/src/utils/AxiosConfig.js 	new file:   client/src/utils/BaseUrl.js

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -62,7 +62,7 @@ a {
 
 .header-top-strip {
   border-bottom: 1px solid var(--color-3b4149);
-  background-color: var(--color-131921);
+  background-color:rgb(114, 78, 114);
 }
 .header-upper {
   background-color: var(--color-131921);
@@ -718,7 +718,7 @@ footer .input-group-text {
   font-size: 14px;
 }
 .cart-col-2 {
-  width: 10%;
+  width: 5%;
 }
 .cart-col-3 {
   width: 15%;
@@ -742,4 +742,87 @@ footer .input-group-text {
   font-size: 16px;
   color: var(--color-777777);
 }
+
+.error{
+  color: red;
+  font-size: 12px !important;
+}
+.icons{
+  height: 30px !important;
+}
+
+.search_input{
+  margin-left: -5rem;
+  width: 60%;
+}
+
+.profile{
+  cursor: pointer;
+  position: relative;
+}
+
+.signout{
+  width: 12rem;
+  display: flex;
+  flex-direction: column;
+  padding:0.3rem 1rem;
+  height: auto;
+  background-color: #fff;
+  position: absolute;
+  top: 7rem;
+  right: 3.6rem;
+  color:#000;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* user profile */
+.profile-wrapper{
+  width: 300px;
+}
+.filter-card{
+  width: 300px;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+ 
+}
+
+
+/* home product murquee */
+.img{
+  max-width: 150px;
+ 
+}
+.img > img{
+  width: 100%;
+  height: 100%;
+}
+
+/* carousel section */
+/* .carousel{
+  height: 700px;
+}
+.carousel>img{
+ max-width: 100%;
+  height: 100%;
+} */
+.img1{
+  max-height: 300px;
+}
+.img1>img{
+  width: 100%;
+  height: 100%;
+}
+
+::-webkit-scrollbar{
+  display: none;
+}
+
 /* Shipping page ends here */
