--- a/client/src/App.css
+++ b/client/src/App.css
@@ -775,9 +775,9 @@ footer .input-group-text {
   border-radius: 8px;
   cursor: pointer;
 }
-
+ 
 /* user profile */
-.profile-wrapper{
+/* .profile-wrapper{
   width: 300px;
 }
 .filter-card{
@@ -792,7 +792,7 @@ footer .input-group-text {
   align-items: center;
   justify-content: center;
  
-}
+}  */
 
 
 /* home product murquee */
@@ -823,6 +823,13 @@ footer .input-group-text {
 
 ::-webkit-scrollbar{
   display: none;
+}
+
+
+/* single blog */
+.blog_img{
+  width: 100%;
+  height: 100%;
 }
 
 /* Shipping page ends here */
